--- a/css/index.scss
+++ b/css/index.scss
@@ -39,6 +39,11 @@
     }
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 // Loader
 
 .pre-load{
@@ -184,6 +189,7 @@
     }
 }
 
+
 // Mainpage 
 
 .mainpage{
@@ -235,6 +241,7 @@
         flex-direction: column;
         width: 90%;
         margin-inline:5%;
+        margin-bottom: 1em;
         &--title{
             margin-bottom: 1em;
         }
@@ -249,7 +256,6 @@
             }
         }
         :nth-child(4){
-            margin-bottom: 2em;
             &::before{
                 content: "3";
             }
@@ -293,6 +299,96 @@
             
         }
     }
+
+    .restaurants{
+        width: 100%;
+        padding-block: 2em;
+        background-color: #afafaf2c;
+        &--title{
+            margin-left: 5%;
+            margin-bottom: 1em;
+        }
+        .card{
+            width: 90%;
+            margin-inline: 5%;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0 0 10px #afafaf;
+            transition: all 0.5s ease;
+            margin-bottom: 1em;
+            position: relative;
+            &.new{
+                &::before{
+                    content:"Nouveau";
+                    background-color: var(--tertiary-color);
+                    position: absolute;
+                    top: 5%;
+                    left: 70%;
+                    z-index: 3;
+                    padding: .5em 1em;
+                    font-size: .9em;
+                    color: darken(#99E2D0, 40%);
+                    animation: blink 1.5s linear infinite;
+                    transform-origin: center;
+                    border-radius: 3px;
+                    box-shadow: 0 0 10px #443e3e;
+                }
+            }
+            &:hover{
+                transform: scale(1.05);
+            }
+            img{
+                min-width: 100%;
+                max-height: 170px;
+                object-fit: cover;
+                position: relative;
+                border-radius: 10px 10px 0 0;
+            }
+            &__footer{
+                padding: 1em;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+            &__description{
+                &--title{
+                    font-size: 1em;
+                    font-weight: bold;
+                    margin-bottom: .3em;
+                }
+                &--info{
+                    font-size: .9em;
+                    font-weight: 400;
+                }
+            }
+            &__like{
+                font-size: 1.5em;
+                position: relative;
+                .fa-heart{
+                    &.empty{
+                        color: black;
+                    }
+                    &.full{
+                        opacity: 0;
+                        position: absolute;
+                        top: 2px;
+                        left: 0px;
+                        background: #9356DC;
+                        background: -webkit-linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        background: -moz-linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        -webkit-background-clip: text;
+                        background-clip: text;
+                        -webkit-text-fill-color: transparent;         
+                        &:hover{
+                            animation: fill .2s linear forwards;
+                        }             
+                    }
+                }
+            }
+        }
+    }
 }
 
 @keyframes fadeIn{
@@ -307,5 +403,23 @@
     100%{
         opacity: 1;
         visibility: visible;
+    }
+}
+
+@keyframes fill{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@keyframes blink{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
