--- a/css/index.scss
+++ b/css/index.scss
@@ -56,6 +56,7 @@ a{
     background-color: #222;
     animation: load 3s linear forwards;
     position: absolute;
+    overflow-x: hidden;
     .loader{
         position: relative;
         width: 700px;
@@ -189,6 +190,38 @@ a{
     }
 }
 
+// Footer
+
+.footer{
+    width: 100%;
+    background-color: #383838;
+    padding: 1.5em;
+    color: #dddddd;
+    &--title{
+        font-family: var(--secondary-font);
+        font-size: 1em;
+        font-weight: lighter;
+        margin-bottom: 1em;
+    }
+    &__links{
+        display: block;
+    }
+    &__link{
+        margin-bottom: .5em;
+        color: #dddddd;
+        font-size: .9em;
+        transition: all 0.2s ease;
+        display: block;
+        transform-origin: left;
+        &:hover{
+            transform: scale(1.05);
+        }
+        i{
+            margin-right: .5em;
+            font-size: .8em;
+        }
+    }
+}
 
 // Mainpage 
 
