--- a/css/index.css
+++ b/css/index.css
@@ -636,4 +636,62 @@ a {
     opacity: 1;
   }
 }
+
+@media screen and (min-width: 380px) {
+  .mainpage .restaurants .card.new::before {
+    left: 85%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .mainpage .steps {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .mainpage .steps--title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+  }
+  .mainpage .steps .step {
+    display: inline-block;
+    width: 30%;
+    text-align: center;
+    margin-inline: auto;
+    padding-inline: 1em;
+  }
+  .mainpage .restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .mainpage .restaurants--title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+  }
+  .mainpage .restaurants .card {
+    width: 45%;
+    margin-bottom: 3em;
+    margin-inline: auto;
+  }
+  .mainpage .restaurants .card.new::before {
+    left: 75%;
+  }
+}
 /*# sourceMappingURL=index.css.map */
