--- a/css/index.scss
+++ b/css/index.scss
@@ -457,6 +457,199 @@ a{
     }
 }
 
+
+// Second Page
+
+.secondPage{
+    .navbar{
+        box-shadow: none;
+        i{
+            position: absolute;
+            top: 25px ;
+            left: 25px;
+            font-size: 1.2em;
+            color: #383838;
+        }
+    }
+    .background-image{
+        display: block;
+        position: absolute;
+        width: 100%;
+        max-height: 350px;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+
+    }
+    .menu{
+        width: 100%;
+        height: auto;
+        position: relative;
+        z-index: 9;
+        display: block;
+        border-radius: 50px 50px 0 0;
+        margin-top: 195px;
+        padding: 2em 1em;
+        background-color: #dddddd;
+        &__entree, &__plats, &__desserts{
+            margin-bottom: 1em;
+        }
+        &__flexTitle{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2em;
+            &--title{
+                font-family: var(--secondary-font);
+                font-weight: 400;
+                font-size: 1.8em;
+                padding-top: .2em;
+            }
+            &--like{
+                font-size: 1.5em;
+                position: relative;
+                .fa-heart{
+                    &.empty{
+                        color: black;
+                    }
+                    &.full{
+                        opacity: 0;
+                        position: absolute;
+                        top: 2px;
+                        left: 0px;
+                        background: #9356DC;
+                        background: -webkit-linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        background: -moz-linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        background: linear-gradient(to bottom, #9356DC 0%, #FF79DA 100%);
+                        -webkit-background-clip: text;
+                        background-clip: text;
+                        -webkit-text-fill-color: transparent;         
+                        &:hover{
+                            animation: fill .2s linear forwards;
+                        }             
+                    }
+                }
+            }
+        }
+        &__subTitle{
+            text-transform: uppercase;
+            font-weight: 300;
+            font-size: 1.1em;
+            position: relative;
+            padding-bottom: .2em;
+            margin-bottom: 1em;
+            &::after{
+                content: "";
+                position: absolute;
+                background-color: darken(#99E2D0, 15%);
+                width: 45px;
+                height: 3px;
+                top: 100%;
+                left: 0;
+            }
+        }
+        &__items{
+            display: flex;
+            flex-direction: column;
+        }
+        &__text{
+            width: 86%;
+            transition: all 0.5s ease;
+        }
+        &__item{
+            display: flex;
+            height: 100%;
+            width: 100%;
+            box-shadow: 0 0 10px #afafaf;
+            border-radius: 10px;
+            background-color: #ebebeb;
+            overflow: hidden;
+            transition: all 0.5s ease;
+            position: relative;
+            padding: .5em 1em;
+            margin-bottom: 1em;
+            &--title{
+                overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            margin-bottom: .2em;
+            font-size: 1.1em;
+                
+            }
+            &--info{
+                overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-size: .9em;
+
+            }
+            &:hover{
+                .menu__checked{
+                    right: 50px;
+                    i{
+                        animation: rotate .3s linear forwards;
+                    }
+                }
+                .menu__text{
+                    width: 70%;
+                    margin-right: .5em;
+                }
+                .menu__price{
+                    width: auto;
+                }
+            }
+        }
+        &__price{
+            display: flex;
+            justify-content: flex-end;
+            align-self: flex-end;
+            transition: all 0.5s ease;
+            width: 50px;
+            
+        }
+        &__checked{
+            position: absolute;
+            background-color: var(--tertiary-color);
+            display: flex;
+            top: 0;
+            right: 0;
+            min-height: 100%;
+            width: 10%;
+            min-width: 50px;
+            justify-content: center;
+            align-items: center;
+            transform: translateX(100%);
+            transition: all 0.5s ease;
+            i{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: bold;
+                line-height: 20px;
+                font-size: .9em;
+                width: 20px;
+                height: 20px;
+                color: var(--tertiary-color);
+                background-color: #fff;
+                border-radius: 50%;
+            }
+        }
+    }
+}
+
+@keyframes rotate{
+    0%{
+        transform: rotate(360deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
 //Media Queries
 
 @media screen and (min-width:380px ) {
